--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style..css">
 </head>
 <body>
-    <header>
-        <h1>vai ser uma imagem aqui </h1>
-        <ul>
-           <li>Escola</li>
-           <li>Estudante</li>     
+    <header class="cabecalho">
+        <img class="cabecalho-imgagem" src="aluraStart logo.png" alt="logo da aluraStart">
+        <ul class="cabecalho-lista"> 
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudante</li>     
         </ul>
     </header>
     
